--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -98,6 +98,9 @@
    <property name="toolTip">
     <string>next round</string>
    </property>
+   <property name="shortcut">
+    <string>N</string>
+   </property>
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
