--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -59,6 +59,7 @@
    <addaction name="actionZoomOut"/>
    <addaction name="separator"/>
    <addaction name="actionNextRound"/>
+   <addaction name="actionOverview"/>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="font">
@@ -100,6 +101,14 @@
    </property>
    <property name="shortcut">
     <string>N</string>
+   </property>
+  </action>
+  <action name="actionOverview">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Overview</string>
    </property>
   </action>
  </widget>
