--- a/waterobjectinfo.ui
+++ b/waterobjectinfo.ui
@@ -453,6 +453,12 @@
   </widget>
   <widget class="QWidget" name="pageHumanShip">
    <layout class="QGridLayout" name="gridLayout_4">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
     <item row="1" column="1">
      <widget class="QLabel" name="labelHumanShipId">
       <property name="text">
@@ -484,19 +490,6 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="0">
-     <spacer name="verticalSpacer_4">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_7">
       <property name="text">
@@ -526,7 +519,12 @@
      </widget>
     </item>
     <item row="5" column="0" colspan="2">
-     <widget class="QTableWidget" name="tableHTargets"/>
+     <widget class="QTableWidget" name="tableHTargets">
+      <property name="columnCount">
+       <number>1</number>
+      </property>
+      <column/>
+     </widget>
     </item>
    </layout>
   </widget>
