introducing PathListItems, for path list on human ship

--- a/waterobjectinfo.ui
+++ b/waterobjectinfo.ui
@@ -510,10 +510,36 @@
     </item>
     <item row="4" column="0" colspan="2">
      <widget class="QTableWidget" name="tableHTargets">
-      <property name="columnCount">
-       <number>1</number>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
       </property>
-      <column/>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>false</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="showGrid">
+       <bool>false</bool>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::NoPen</enum>
+      </property>
+      <property name="columnCount">
+       <number>0</number>
+      </property>
+      <attribute name="horizontalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
      </widget>
     </item>
     <item row="5" column="0" colspan="2">
