--- a/waterobjectinfo.ui
+++ b/waterobjectinfo.ui
@@ -47,7 +47,7 @@
    <enum>QFrame::StyledPanel</enum>
   </property>
   <property name="currentIndex">
-   <number>5</number>
+   <number>3</number>
   </property>
   <widget class="QWidget" name="pageReallyNothing"/>
   <widget class="QWidget" name="pageWater">
@@ -508,21 +508,28 @@
            <property name="spacing">
             <number>0</number>
            </property>
-           <item row="1" column="1">
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Ships:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
             <widget class="QPushButton" name="pbSetShipPatrolIsle">
              <property name="text">
               <string>PAT</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
+           <item row="4" column="0">
             <widget class="QPushButton" name="pbDeleteShip">
              <property name="text">
               <string>DEL</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="2">
+           <item row="4" column="2">
             <widget class="QPushButton" name="pbSetShipTarget">
              <property name="autoFillBackground">
               <bool>true</bool>
@@ -532,8 +539,14 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0" colspan="3">
+           <item row="3" column="0" colspan="4">
             <widget class="QTableWidget" name="tblwHShipList">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>3</verstretch>
+              </sizepolicy>
+             </property>
              <property name="frameShadow">
               <enum>QFrame::Plain</enum>
              </property>
@@ -558,6 +571,36 @@
              <attribute name="verticalHeaderVisible">
               <bool>false</bool>
              </attribute>
+            </widget>
+           </item>
+           <item row="1" column="0" colspan="4">
+            <widget class="QTableWidget" name="tblwHFleetList">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+               <horstretch>0</horstretch>
+               <verstretch>1</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>30</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="3">
+            <widget class="QPushButton" name="pushButton">
+             <property name="text">
+              <string>+Flt</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_11">
+             <property name="text">
+              <string>Fleets:</string>
+             </property>
             </widget>
            </item>
           </layout>
@@ -670,6 +713,13 @@
     <property name="rightMargin">
      <number>0</number>
     </property>
+    <item row="2" column="0" colspan="2">
+     <widget class="QLabel" name="labelHumanShipTechnology">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label_7">
       <property name="text">
@@ -793,13 +843,6 @@
     </item>
     <item row="1" column="0" colspan="2">
      <widget class="QLabel" name="labelHumanShipDamage">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0" colspan="2">
-     <widget class="QLabel" name="labelHumanShipTechnology">
       <property name="text">
        <string>TextLabel</string>
       </property>
